--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       <section class="hj rp hr">
        
         <div
-          x-data="{ sectionTitle: `Client’s Testimonials`, sectionTitleText: `It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.`}"
+          x-data="{ sectionTitle: `Client Testimonials`, sectionTitleText: `It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.`}"
         >
           <div class="animate_top bb ze rj ki xn vq">
     <h2
