--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       <section class="hj rp hr">
        
         <div
-          x-data="{ sectionTitle: `Client's Testimonials`, sectionTitleText: `"We take pride in delivering innovative solutions that combine creativity and technology, tailored to meet the unique needs of our clients. With a focus on premium quality and exceptional attention to detail, we ensure every project exceeds expectations and drives success."`}"
+          x-data="{ sectionTitle: `Client’s Testimonials`, sectionTitleText: `We take pride in delivering innovative solutions that combine creativity and technology, tailored to meet the unique needs of our clients. With a focus on premium quality and exceptional attention to detail, we ensure every project exceeds expectations and drives success.`}"
         >
           <div class="animate_top bb ze rj ki xn vq">
     <h2
