--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <meta property="og:title" content="RapidAI Services and Solutions" />
     <meta property="og:description" content="Providing innovative AI-driven solutions, web development, and cutting-edge UI/UX designs to elevate your business." />
     <meta property="og:image" content="images/og-image.jpg" />
-    <meta property="og:url" content="https://rapidai-services-and-solutions.netlify.app/" />
+    <meta property="og:url" content="https://rapidai-services-and-solutions.in" />
     <meta property="og:type" content="website" />
   
     <!-- Twitter Card Metadata -->
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://rapidai-services-and-solutions.netlify.app/" />
+    <link rel="canonical" href="https://rapidai-services-and-solutions.in" />
   
     <!-- External Stylesheets -->
     <link href="style.css" rel="stylesheet" />
@@ -42,8 +42,8 @@
         
         "@type": "Organization",
         "name": "RapidAI Services and Solutions",
-        "url": "https://rapidai-services-and-solutions.netlify.app/",
-        "logo": "https://rapidai-services-and-solutions.netlify.app/images/logo.png",
+        "url": "https://rapidai-services-and-solutions.in",
+        "logo": "https://rapidai-services-and-solutions.in/images/logo.png",
         "description": "RapidAI provides innovative AI-driven solutions, web development, and cutting-edge UI/UX designs tailored to elevate your business.",
         "sameAs": [
           "https://www.linkedin.com/company/rapidai-solutions-and-services/"
